feat(check): added claim checking feature (#19)
